# opensearch-benchmark

./: .gitignore  LICENSE  README-actions.md  README.md  SETUP.md  SETUP_ES.md  SETUP_OS.md  boxplot_cluster_experiments.ipynb  plots.ipynb  requirements.txt  setup_os.sh  setup_osb.sh
.github/: README.md  generate-matrix.py
analysis/: analyze.ipynb  download-data.py  gsheet-analysis.ipynb  requirements.txt  small_big_diffs.ipynb
benchmark/: big5_os.txt  os-123-output-latency.json  os-123-output-latency.json-output.csv  os-123-output.json  os-123-output.json-output.csv
index/: big5_index_es.json
infra/: .gitignore  .terraform.lock.hcl  README.md  deploying_datastore.md  get_latest_snapshot_version.py  main.tf  outputs.tf  results_metadata.md  terraform.tfvars  terraform.tfvars.example  terraform.tfvars.template  variables.tf  vectorsearch_params.json
infra/scripts/benchmark_results_downloader/: .gitignore  README.md  download_nightly.sh  download_versioned.sh  pyproject.toml
infra/scripts/benchmark_results_downloader/benchmark_results_downloader/: main.py
infra/scripts/report-gen/: .gitignore  LICENSE  Makefile  README.md  diff_report.sh  download.sh  download_dev.sh  download_manual.sh  download_nightly.sh  download_versioned.sh  pyproject.toml  report_nightly.sh  report_versioned.sh
infra/scripts/report-gen/src/report_gen/: __init__.py  __main__.py  _cli.py  common.py  diff.py  download.py  google_sheets.py  results.py
infra/scripts/report-gen/src/report_gen/sheets/: __init__.py  auth.py  common.py  format_color.py  format_font.py  format_freeze.py  format_merge.py  format_number.py  import_data.py  osversion.py  overall.py  result.py  summary.py
infra/scripts/report-gen/src/report_gen/sheets/format/: __init__.py  color.py  font.py  freeze.py  merge.py  number.py
infra/scripts/report-gen/test/: test_benchmark_result.py  test_google.py  test_init.py  test_sheet.py
infra/scripts/report-gen/test/data/: results.csv  summary.csv
infra/scripts/report-gen/test/data/test_data/: 2024-10-25T000219Z-ES-8.15.0-pmc-append-no-conflicts.csv  2024-10-25T000224Z-OS-2.16.0-big5-big5.csv  2024-10-25T000236Z-ES-8.15.0-big5-big5.csv  2024-10-25T000238Z-OS-2.16.0-noaa-aggs.csv  2024-10-25T000246Z-OS-2.16.0-nyc_taxis-append-no-conflicts.csv  2024-10-25T000246Z-OS-2.16.0-pmc-append-no-conflicts.csv  2024-10-25T003718Z-ES-8.15.0-noaa-aggs.csv  2024-10-25T004024Z-ES-8.15.0-nyc_taxis-append-no-conflicts.csv  2024-10-26T000212Z-ES-8.15.0-pmc-append-no-conflicts.csv  2024-10-26T000214Z-ES-8.15.0-big5-big5.csv  2024-10-26T000226Z-OS-2.16.0-big5-big5.csv  2024-10-26T000228Z-OS-2.16.0-noaa-aggs.csv  2024-10-26T000231Z-OS-2.16.0-nyc_taxis-append-no-conflicts.csv  2024-10-26T000234Z-OS-2.16.0-pmc-append-no-conflicts.csv  2024-10-26T003731Z-ES-8.15.0-noaa-aggs.csv  2024-10-26T004029Z-ES-8.15.0-nyc_taxis-append-no-conflicts.csv  2024-10-27T000214Z-OS-2.16.0-big5-big5.csv  2024-10-27T000225Z-ES-8.15.0-pmc-append-no-conflicts.csv  2024-10-27T000227Z-ES-8.15.0-big5-big5.csv  2024-10-27T000228Z-OS-2.16.0-noaa-aggs.csv  2024-10-27T000230Z-OS-2.16.0-pmc-append-no-conflicts.csv  2024-10-27T000236Z-OS-2.16.0-nyc_taxis-append-no-conflicts.csv  2024-10-27T003805Z-ES-8.15.0-noaa-aggs.csv  2024-10-27T004135Z-ES-8.15.0-nyc_taxis-append-no-conflicts.csv  2024-10-28T000232Z-ES-8.15.0-pmc-append-no-conflicts.csv  2024-10-28T000232Z-OS-2.16.0-big5-big5.csv  2024-10-28T000233Z-ES-8.15.0-big5-big5.csv  2024-10-28T000233Z-OS-2.16.0-noaa-aggs.csv  2024-10-28T000234Z-OS-2.16.0-nyc_taxis-append-no-conflicts.csv  2024-10-28T000240Z-OS-2.16.0-pmc-append-no-conflicts.csv  2024-10-28T004024Z-ES-8.15.0-noaa-aggs.csv  2024-10-28T004128Z-ES-8.15.0-nyc_taxis-append-no-conflicts.csv  2024-12-07T000141Z-OS-2.16.0-big5--big5.csv  2024-12-07T000153Z-ES-8.15.4-big5--big5.csv  2024-12-07T000156Z-ES-8.15.4-noaa--aggs.csv  2024-12-07T000200Z-OS-2.17.1-big5--big5.csv  2024-12-07T000239Z-OS-2.17.1-noaa--aggs.csv  2024-12-07T000239Z-OS-2.18.0-noaa--aggs.csv  2024-12-07T000241Z-OS-2.16.0-noaa--aggs.csv  2024-12-07T000241Z-OS-2.18.0-pmc--append-no-conflicts.csv  (+169 more)
infra/scripts/report_generator/: .gitignore  README.md  pyproject.toml  report_nightly.sh  report_versioned.sh
infra/scripts/report_generator/report_generator/: common.py  import_data.py  main.py  result.py  summary.py
os-scripts/: install-os.sh  install-osb.sh  run-bench.sh  run-os-cluster.sh
scripts/: big5_es_test.sh  big5_os_run.sh  big5_os_test.sh  (+5 more)
(+97 files in other folders)
