[tool.poetry]
name = "benchmark-results-downloader"
version = "0.1.0"
description = ""
authors = ["Stefano Bonicatti <stefano.bonicatti@trailofbits.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opensearch-py = "^2.7.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
mypy = "^1.11.2"

[tool.poetry.scripts]
benchmark_results_downloader = "benchmark_results_downloader.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "W", "UP", "I", "N", "YTT", "BLE", "C4", "SIM", "I"]
target-version = "py312"

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
